--- a/src/components/UI/Avatar/avatar.module.scss
+++ b/src/components/UI/Avatar/avatar.module.scss
@@ -10,4 +10,16 @@
   user-select: none;
   border-radius: 50%;
   justify-content: center;
+
+  & > img {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    object-fit: cover;
+  }
+}
+
+.avatarDefault {
+  color: white;
+  background-color: lightgray;
 }
