--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,9 @@
 @import "~normalize.css";
+
+body {
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 400;
+  letter-spacing: 0.01071em;
+  line-height: 1.43;
+}
