--- a/src/components/UI/List/Item/item.module.scss
+++ b/src/components/UI/List/Item/item.module.scss
@@ -7,5 +7,9 @@
   width: 100%;
   box-sizing: border-box;
   text-align: left;
-  padding-top: 8px;
+  padding: 4px;
+}
+
+.button {
+  cursor: pointer;
 }
